hphp/test/zend/good/ext/standard/tests/file/lstat_stat_error.php.skipif
<?hh
<<__EntryPoint>> function main() {
if (substr(PHP_OS, 0, 3) == 'WIN') {
    die('skip.. lstat() not available on Windows');
}
}
